header Div, 50% width

--- a/Alex.html
+++ b/Alex.html
@@ -6,7 +6,11 @@
         <link rel="stylesheet" href="alexstyle.css"></link> <!--link between the body and css sheet. Ask C regarding rel= and href-->
     </head>
     <body>
-        <p id="heading1">Click <i>one</i> of the four <b>images</b> below to head to <i>Craig's Website!</i></p>
+        <div id="header">
+            <p id="heading1">Click <i>one</i> of the four <b>images</b> below to head to <i>Craig's Website!</i></p>
+        
+        </div>
+        
         <p>
             <a href="https://craig.mayhew.io/">
             <img id="alex1" src="https://craig.mayhew.io/imgs/bg.jpg">
