Added link relation explanation

--- a/Alex.html
+++ b/Alex.html
@@ -3,7 +3,7 @@
     <head>
         <title>HTML Master Class</title>
         <meta charset="UTF-8"> <!--include this in everything, helps with language selection-->
-        <link rel="stylesheet" href="alexstyle.css"></link> <!--link between the body and css sheet. Ask C regarding rel= and href-->
+        <link rel="stylesheet" href="alexstyle.css"></link> <!--all css will use rel="stylesheet" to show the relationship of what what we are referencing is a cascasding style sheet aka css file-->
     </head>
     <body>
         <div id="header">
