Corrected closing tags

--- a/Alex.html
+++ b/Alex.html
@@ -23,7 +23,7 @@
         </p>
 
         <p style="font-size:20px">
-            <b>This is paragraph TWO, and <a href="https://www.google.com/">here is a link to google</b></a>
+            <b>This is paragraph TWO, and <a href="https://www.google.com/">here is a link to google</a></b>
         </p>
         
         <p id="click1"> 
