Lesson on class=

--- a/Alex.html
+++ b/Alex.html
@@ -12,13 +12,14 @@
             </p>
         </div>
         
-        <p>
+        <p class="bronko">
             <a href="https://craig.mayhew.io/">
                 <img id="alex1" src="https://craig.mayhew.io/imgs/bg.jpg">
                 <img id="alex2" src="https://craig.mayhew.io/imgs/bg.jpg">
                 <img id="alex3" src="https://craig.mayhew.io/imgs/bg.jpg">
                 <img id="alex4" src="https://craig.mayhew.io/imgs/bg.jpg">
-            </a>
+            </a> 
+            This is some text
             <!--by giving the image an 'id' or name it allows for individual customisation-->
         </p>
 
@@ -26,9 +27,9 @@
             <b>This is paragraph TWO, and <a href="https://www.google.com/">here is a link to google</a></b>
         </p>
         
-        <p id="click1"> 
+        <p class="bronko" id="click1"> 
             <b>
-                Click an image and go to the source website :)  
+                Click an image to go to the source website :)  
             </b>
         </p>
 
