--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         <p class="bronko" id="click1"> 
             <b>
-                Click an image to go to the source website :)  
+                Click the image to go to the source website.  
             </b>
         </p>
 
