Moved code to below cat image, changed the text and link also.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,6 @@
                 Click <i>one</i> of the four <b>images</b> below to head to <i>Craig's Website!</i>
             </p>
         </div>
-
-        <p style="font-size:20px">
-            <b>This is paragraph TWO, and <a href="https://www.google.com/">here is a link to google</a></b>
-        </p>
         
         <p class="bronko" id="click1"> 
             <b>
@@ -24,6 +20,10 @@
 
         <p>
                 <img id="cat1" src="https://newevolutiondesigns.com/images/freebies/cool-wallpaper-1.jpg">
+        </p>
+
+        <p style="font-size:20px">
+            <b>Press the following link to head over to Craig's tutorial page <a href="http://craigmayhew.github.io/tutorials/">here is the link</a></b>
         </p>
 
     </body>
