Removed HTML <style and put it into CSS

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <img id="cat1" src="https://newevolutiondesigns.com/images/freebies/cool-wallpaper-1.jpg">
         </p>
 
-        <p style="font-size:20px">
+        <p id="craigtuts">
             <b>Press the following link to head over to Craig's tutorial page <a href="http://craigmayhew.github.io/tutorials/">here is the link</a></b>
         </p>
 
