--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <div id="header">
             <p id="heading1">
-                Click <i>one</i> of the four <b>images</b> below to head to <i>Craig's Website!</i>
+                The image is centered and adjusts in size when the browser does, try it!
             </p>
         </div>
         
