target="_blank" added to hyperlink
This opens the link in a new tab

--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
         <p class="bronko" id="click1"> 
             <b>
-                Click the image to go to the source website.  
+                The following paragraph displays the use of class=  
             </b>
         </p>    
 
         <p id="craigtuts">
-            <b>Press the following link to head over to Craig's tutorial page <a href="http://craigmayhew.github.io/tutorials/">here is the link</a></b>
+            <b>Press the following link to head over to Craig's tutorial page, you'll notice it opens in a new tab <a href="http://craigmayhew.github.io/tutorials/" target="_blank">here is the link</a></b>
         </p>
 
     </body>
