Added comments to for understanding

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="alexstyle.css"></link> <!--all css will use rel="stylesheet" to show the relationship of what what we are referencing is a cascasding style sheet aka css file-->
     </head>
     <body>
-        <div id="header">
+        <div id="header"> <!-- the div element is a block element, and will start a new line. Divide/Seperate itselfs-->
             <p id="heading1">
                 The image is centered and adjusts in size when the browser does, try it!
             </p>
