class= poen and use of div to start new lines

--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
             <img id="cat1" src="https://newevolutiondesigns.com/images/freebies/cool-wallpaper-1.jpg">
         </p>
 
-        <p class="bronko" id="click1"> 
-            <b>
-                The following paragraph displays the use of class=  
-            </b>
+        <p class="poemformat"> The following paragraph displays the use of class and div 
+            <div class="poemformat">Once more into the fray</div>
+            <div class="poemformat">Into the last good fight I'll ever know</div>
+            <div class="poemformat">Live or die on this day</div>
+            <div class="poemformat">Live or die on this day</div>
         </p>    
 
         <p id="craigtuts">
