Added span tags to poem, removed class= entries.

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
             <img id="cat1" src="https://newevolutiondesigns.com/images/freebies/cool-wallpaper-1.jpg">
         </p>
 
-        <p class="poemformat"> The following paragraph displays the use of class and div <!--class used here to allow one group style with multi line use-->
-            <div class="poemformat">Once more into the fray</div>
-            <div class="poemformat">Into the last good fight I'll ever know</div>
-            <div class="poemformat">Live or die on this day</div>
-            <div class="poemformat">Live or die on this day</div> <!-- usage of <div> to start new lines-->
+        <p id=poemtitle> <U>THE FOLLOWING TEXT DISPLAYS THE USE OF SPAN TAGS AND LINE BREAKS</U><br>
+            <span>
+                Once more into the fray<br>
+                Into the last good fight I'll ever know<br>
+                Live or die on this day<br>
+                Live or die on this day<br>
+            </span>
         </p>    
 
         <p id="craigtuts">
