Adding span span tags and the css coding
Also, added in explaination comments for span tags, selectors.

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
         <p id=poemtitle> <U>THE FOLLOWING TEXT DISPLAYS THE USE OF SPAN TAGS AND LINE BREAKS</U><br>
             <span>
                 Once more into the fray<br>
-                Into the last good fight I'll ever know<br>
-                Live or die on this day<br>
+                <span>
+                    Into the last good fight I'll ever know<br>
+                    Live or die on this day<br>
+                </span>
                 Live or die on this day<br>
             </span>
         </p>    
