altered some text

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </p>    
 
         <p id="craigtuts">
-            <b>Press the following link to head over to Craig's tutorial page, you'll notice it opens in a new tab <a href="http://craigmayhew.github.io/tutorials/" target="_blank">here is the link</a></b>
+            <b>Press the link to head over to Craig's tutorial page, you'll notice it opens in a new tab <a href="http://craigmayhew.github.io/tutorials/" target="_blank">here is the link</a></b>
         </p>
 
     </body>
