Removed explaination text. triv

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html> <!--include this in all HTML DOCs, tells the doc to run as HTLM5-->
-<html>
+<html> 
     <head>
         <title>HTML Master Class</title>
-        <meta charset="UTF-8"> <!--include this in everything, helps with language selection-->
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="alexstyle.css"></link> <!--all css will use rel="stylesheet" to show the relationship of what what we are referencing is a cascasding style sheet aka css file-->
     </head>
     <body>
