Added h1 lists of links and started some css on it

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="alexstyle.css"></link> <!--all css will use rel="stylesheet" to show the relationship of what what we are referencing is a cascasding style sheet aka css file-->
     </head>
     <body>
-        <div id="header"> <!-- the div element is a block element, and will start a new line. Divide/Seperate itselfs-->
+        <div id="header"> <!-- the div element is a block element, and will start a new line-->
             <p id="heading1">
                 The image is centered and adjusts in size when the browser does, try it!
             </p>
@@ -27,8 +27,10 @@
             </span>
         </p>    
 
+    <h1 class="links"><U>A LIST OF USEFUL LINKS AND A DEMONSTRATION OF THE CLASS ATTRIBUTE</U></h1>    
+
         <p id="craigtuts">
-            <b>Press the link to head over to Craig's tutorial page, you'll notice it opens in a new tab <a href="http://craigmayhew.github.io/tutorials/" target="_blank">here is the link</a></b>
+            <b>Press the link to head over to Craig's tutorial page, you'l notice it opens in a new tab <a href="http://craigmayhew.github.io/tutorials/" target="_blank">here is the link</a></b>
         </p>
 
     </body>
