--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <h1 class="links"><U>A LIST OF USEFUL LINKS AND A DEMONSTRATION OF THE CLASS ATTRIBUTE</U></h1>    
 
         <p id="craigtuts">
-            <b>Press the link to head over to Craig's tutorial page, you'l notice it opens in a new tab <a href="http://craigmayhew.github.io/tutorials/" target="_blank">here is the link</a></b>
+            <b>Press the link to head over to Craig's tutorial page, you'll notice it opens in a new tab <a href="http://craigmayhew.github.io/tutorials/" target="_blank">here is the link</a></b>
         </p>
 
     </body>
