Moved code for easier reading

--- a/index.html
+++ b/index.html
@@ -6,32 +6,35 @@
         <link rel="stylesheet" href="alexstyle.css"></link> <!--all css will use rel="stylesheet" to show the relationship of what what we are referencing is a cascasding style sheet aka css file-->
     </head>
     <body>
-        <div id="header"> <!-- the div element is a block element, and will start a new line-->
-            <p id="heading1">
-                The image is centered and adjusts in size when the browser does, try it!
+            <div id="header"> <!-- the div element is a block element, and will start a new line-->
+                <p id="heading1">
+                    The image is centered and adjusts in size when the browser does, try it!
+                </p>
+            </div>   
+
+            <p>
+                <img id="cat1" src="https://newevolutiondesigns.com/images/freebies/cool-wallpaper-1.jpg">
             </p>
-        </div>   
 
-        <p>
-            <img id="cat1" src="https://newevolutiondesigns.com/images/freebies/cool-wallpaper-1.jpg">
-        </p>
-
-        <p id=poemtitle> <U>THE FOLLOWING TEXT DISPLAYS THE USE OF SPAN TAGS AND LINE BREAKS</U><br>
-            <span>
-                Once more into the fray<br>
+            <p id=poemtitle> <U>THE FOLLOWING TEXT DISPLAYS THE USE OF SPAN TAGS AND LINE BREAKS</U><br>
                 <span>
-                    Into the last good fight I'll ever know<br>
+                    Once more into the fray<br>
+                    <span>
+                        Into the last good fight I'll ever know<br>
+                        Live or die on this day<br>
+                    </span>
                     Live or die on this day<br>
                 </span>
-                Live or die on this day<br>
-            </span>
-        </p>    
+            </p>    
 
-    <h1 class="links"><U>A LIST OF USEFUL LINKS AND A DEMONSTRATION OF THE CLASS ATTRIBUTE</U></h1>    
+        <h1 class="links"><U>A COUPLE OF USEFUL LINKS WHICH ALSO DEMONSTRATES THE 'CLASS' ATTRIBUTE</U></h1>
+            
+            <p class="craigtuts">
+                <b>Press the link to head over to Craig's tutorial page, you'll notice it opens in a new tab <a href="http://craigmayhew.github.io/tutorials/" target="_blank">here is the link</a></b>
+             </p>
 
-        <p id="craigtuts">
-            <b>Press the link to head over to Craig's tutorial page, you'll notice it opens in a new tab <a href="http://craigmayhew.github.io/tutorials/" target="_blank">here is the link</a></b>
-        </p>
+
+
 
     </body>
 </html>
