Added second line and link to useful links

--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@
                 </span>
             </p>    
 
-        <h1 class="links"><U>A COUPLE OF USEFUL LINKS WHICH ALSO DEMONSTRATES THE 'CLASS' ATTRIBUTE</U></h1>
-            
+        <h1 class="links"><U>A COUPLE OF USEFUL LINKS BELOW | THIS ALSO DEMONSTRATES THE 'CLASS' ATTRIBUTE</U></h1>
             <p class="craigtuts">
                 <b>Press the link to head over to Craig's tutorial page, you'll notice it opens in a new tab <a href="http://craigmayhew.github.io/tutorials/" target="_blank">here is the link</a></b>
              </p>
-
+            <p class="craigtuts">
+                <b>This link takes you to his Github tutorial tree, you'll notice this one opens in the same window <a href="https://github.com/craigmayhew/tutorials/tree/gh-pages" target="_self">here is the link</a></b>
+            </p>
 
 
 
