--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>   
 
         <p>
-            <img id="cat1" src="https://newevolutiondesigns.com/images/freebies/cool-wallpaper-1.jpg">
+            <img id="cat1" alt="catimage" src="https://newevolutiondesigns.com/images/freebies/cool-wallpaper-1.jpg">
         </p>
 
         <p id=poemtitle> <U>THE FOLLOWING TEXT DISPLAYS THE USE OF SPAN TAGS AND LINE BREAKS</U><br>
@@ -35,6 +35,9 @@
              <b>This link takes you to his Github tutorial tree, you'll notice this one opens in the same window <a href="https://github.com/craigmayhew/tutorials/tree/gh-pages" target="_self">here is the link</a></b>
         </p>
 
+        <p>
+            <img id="NMElogo" alt="NMELOGO" src="https://upload.wikimedia.org/wikipedia/commons/e/ef/NME_logo_free.svg">
+        </p>
 
 
     </body>
