added list underneath logo
NME

--- a/index.html
+++ b/index.html
@@ -31,6 +31,22 @@
             <img id="NMElogo" alt="NMELOGO" src="https://upload.wikimedia.org/wikipedia/commons/e/ef/NME_logo_free.svg">
         </p>
 
+        <p id="list"><U>THIS IS NME's COOL LIST 2004</U><br>
+            <ol id="pete" type="1"> 
+                <li>Pete Doherty</li>        
+                <li>Mike Skinner</li>
+                <li>Eminem</li>
+                <li>Johnny Borrell</li>
+                <li>Nick McCarthy</li>
+                <li>Morrissey</li>
+                <li>Kele Okereke</li>
+                <li>Martin Tomlinson</li>
+                <li>Brandon Flowers</li>
+                <li>Ann Matronic</li>
+            </ol>
+        </p>
+
+
     <h1 class="links"><U>A COUPLE OF USEFUL LINKS BELOW | THIS ALSO DEMONSTRATES THE 'CLASS' ATTRIBUTE</U></h1>
         <p class="craigtuts">
              <b>Press the link to head over to Craig's tutorial page, you'll notice it opens in a new tab <a href="http://craigmayhew.github.io/tutorials/" target="_blank">here is the link</a></b>
