Added useful explainations/prompts

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <p>
             <img id="cat1" alt="catimage" src="https://newevolutiondesigns.com/images/freebies/cool-wallpaper-1.jpg">
         </p>
-
+        <!--Title and poem-->
         <p id=poemtitle> <U>THE FOLLOWING TEXT DISPLAYS THE USE OF SPAN TAGS AND LINE BREAKS</U><br>
             <span>
                 Once more into the fray<br>
@@ -26,11 +26,11 @@
                 Live or die on this day<br>
             </span>
         </p>  
-
+        <!--NME Logo-->
         <p>
             <img id="NMElogo" alt="NMELOGO" src="https://upload.wikimedia.org/wikipedia/commons/e/ef/NME_logo_free.svg">
         </p>
-
+        <!--NME List-->
         <p id="list"><U>THIS IS NME's COOL LIST 2004</U><br>
             <ol id="pete" type="1"> 
                 <li>Pete Doherty</li>        
@@ -45,8 +45,7 @@
                 <li>Ann Matronic</li>
             </ol>
         </p>
-
-
+        <!--Useful links starts here-->
     <h1 class="links"><U>A COUPLE OF USEFUL LINKS BELOW | THIS ALSO DEMONSTRATES THE 'CLASS' ATTRIBUTE</U></h1>
         <p class="craigtuts">
              <b>Press the link to head over to Craig's tutorial page, you'll notice it opens in a new tab <a href="http://craigmayhew.github.io/tutorials/" target="_blank">here is the link</a></b>
