--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
         <link rel="stylesheet" href="alexstyle.css"></link> <!--all css will use rel="stylesheet" to show the relationship of what what we are referencing is a cascasding style sheet aka css file-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script>
-            $(document).ready(function(){
+            $(document).ready(function(){ 
                 $("button").click(function(){
                 $("#NMElogo").toggle();
                         });
                     });
         </script>
+        <!--this line $(document).ready(function(){ tells it to only function when the page is 100% loaded -->
     </head>
     <body>
         <div id="header"> <!-- the div element is a block element, and will start a new line-->
