--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="alexstyle.css"></link> <!--all css will use rel="stylesheet" to show the relationship of what what we are referencing is a cascasding style sheet aka css file-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <!--NME Logo toggle button JQuery code block-->
         <script>
             $(document).ready(function(){ 
                 $("button").click(function(){
@@ -12,6 +13,7 @@
                         });
                     });
         </script>
+        <!--Alert message appears when you enter the cat image-->
         <script>
             $(document).ready(function(){
                 $("#cat1").mouseenter(function(){
