Changed JQ function on Cat pic

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
                         });
                     });
         </script>
-        <!--Alert message appears when you enter the cat image-->
+        <!--Alert message appears when you double click the cat image-->
         <script>
             $(document).ready(function(){
-                $("#cat1").mouseenter(function(){
-                    alert("So you like cats?");
+                $("#cat1").dblclick(function(){
+                    alert("SECRET FOUND!");
                         });
                     });
         </script>
