Added "bigheading" to the page. Added css styling too

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         </script>
     </head>
     <body>
+        <div class="bigheading">
+            <h1><span>Test Home Page</span></h1>   
+                <p>By Alex Tribe</p>         
+        </div>
         <div id="header"> <!-- the div element is a block element, and will start a new line-->
             <p id="heading1">
                  The image is centered and adjusts in size when the browser does, try it!
@@ -66,7 +70,7 @@
             </ol>
         </p>
         <!--Useful links starts here-->
-    <h1 class="links"><U>A COUPLE OF USEFUL LINKS BELOW | THIS ALSO DEMONSTRATES THE 'CLASS' ATTRIBUTE</U></h1>
+    <h2 class="links"><U>A COUPLE OF USEFUL LINKS BELOW | THIS ALSO DEMONSTRATES THE 'CLASS' ATTRIBUTE</U></h2>
         <p class="craigtuts">
              <b>Press the link to head over to Craig's tutorial page, you'll notice it opens in a new tab <a href="http://craigmayhew.github.io/tutorials/" target="_blank">here is the link</a></b>
          </p>
