--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>HTML Master Class</title>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="alexstyle.css"></link> <!--all css will use rel="stylesheet" to show the relationship of what what we are referencing is a cascasding style sheet aka css file-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <!--NME Logo toggle button JQuery code block-->
