Removed text for heading

--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
     </head>
     <body>  
         <div id="bigheading">
-            Test Home Page<br>
-                <span>By Alex Tribe</span>            
+            Test Home Page       
         </div>
         <div id="header"> <!-- the div element is a block element, and will start a new line-->
             <p id="heading1">
