FIXED issues with padding
Had odd spaces appearing and found issue to be a padding issue. I have to set padding-top and padding-bottom  instead of padding:

--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
         <p class="craigtuts">
              <b>This link takes you to his Github tutorial tree, you'll notice this one opens in the same window <a href="https://github.com/craigmayhew/tutorials/tree/gh-pages" target="_self">here is the link</a></b>
         </p>    
-
+        <footer>
+            <p>This is my footer and will eventually contain &copy information </p>
+        </footer>
 
     </body>
 </html>
