Added progress bar
Adde progress bar, but lost shrinking header...currently investigating

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
         <script src="jquery.slides.min.js"></script>
         <script src="alex.js"></script>
     </head>
+
+    <!--Below code is the html for the scroll progress bar-->
+<div class="header">
+    <div class="progress-container">
+      <div class="progress-bar" id="myBar"></div>
+    </div>
+  </div>
+
     <body>  
         <div id="bigheading">
             Dynamically Shrinking Heading    
